--- a/- Copy.env
+++ b/- Copy.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:N+1TAa5g55UzPtfVXOfTdofXcwdL4DG9zTE07ZFn84s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=blog
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,12 +23,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=costinha.programador@gmail.com
+MAIL_PASSWORD=jgmsqvkuaqxczlfw
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
